# auto-vastai

./: CHANGELOG.md  README.md  pyproject.toml  runvastai.py
remote_ml_devtools/: RemoteMLManager.py
remote_ml_devtools/vastai_client/: __init__.py  models.py  vast_client.py  vast_utils.py
tests/: example.yaml  offer_list.json  test_query.py
tests/vastai/: test_vastai.py
