[tool.poetry]
name = "remote-ml-dev-tools"
version = "0.1.0"
description = "Development tooling for doing ML development when you do not have a local GPU."
authors = ["cptspacemanspiff <19273992+cptspacemanspiff@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "remote_ml_dev_tools"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
